@@ -1258,6 +1258,10 @@ bool CSQLHelper::OpenDatabase()
 	{
 		UpdatePreferencesVar("ZWaveNetworkKey", "0x01, 0x02, 0x03, 0x04, 0x05, 0x06, 0x07, 0x08, 0x09, 0x0A, 0x0B, 0x0C, 0x0D, 0x0E, 0x0F, 0x10");
 	}
+	if (!GetPreferencesVar("ZWaveEnableNightlyNetworkHeal", nValue))
+	{
+		UpdatePreferencesVar("ZWaveEnableNightlyNetworkHeal", 0);
+	}
 	if (!GetPreferencesVar("BatteryLowNotification", nValue))
 	{
 		UpdatePreferencesVar("BatteryLowNotification", 0); //default disabled
